Fix class vars style in pygments (was yellow, not readable)

--- a/stylesheets/pygment_black.css
+++ b/stylesheets/pygment_black.css
@@ -65,7 +65,7 @@
 .code_section .highlight .s1{color:#E2DB74}
 .code_section .highlight .ss{color:#AE81FF}
 .code_section .highlight .bp{color:#efef8f}
-.code_section .highlight .vc{color:#efef8f}
+.code_section .highlight .vc{color:#F3F3F3}
 .code_section .highlight .vg{color:#F3F3F3}
 .code_section .highlight .vi{color:#F3F3F3}
 .code_section .highlight .il{color:#8cd0d3}
