--- a/stylesheets/pygment_white.css
+++ b/stylesheets/pygment_white.css
@@ -65,7 +65,7 @@
 .highlight .s1{color:#728B14}
 .highlight .ss{color:#7644E4}
 .highlight .bp{color:#efef8f}
-.highlight .vc{color:#efef8f}
+.highlight .vc{color:#272822}
 .highlight .vg{color:#272822}
 .highlight .vi{color:#272822}
 .highlight .il{color:#8cd0d3}
